.ssh/config: Add git@github.com options

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,5 +1,10 @@
 # OpenSSH client configuration file format is described in ssh_config(5) manual page.
 
+Match user git host github.com
+	ForwardX11 no
+	ForwardX11Trusted no
+	ForwardAgent no
+
 Host *
 	ForwardAgent yes
 	StrictHostKeyChecking no
@@ -7,6 +12,9 @@ Host *
 	ForwardX11 yes
 	ForwardX11Trusted yes
 	Compression yes
+    AddKeysToAgent yes
+    GSSAPIAuthentication yes
+    GSSAPIDelegateCredentials yes
 	#ControlMaster auto
 	#ControlPersist yes
 
@@ -16,12 +24,18 @@ Host gitery # Гитовница
 	Port 222
 	# if stored separately
 	IdentityFile ~/.ssh/girar.key
+	ForwardX11 no
+	ForwardX11Trusted no
+	ForwardAgent no
 
 Host gyle # Сборочница
 	HostName gyle.altlinux.org
 	User git_liannnix
 	Port 222
 	IdentityFile ~/.ssh/girar.key
+	ForwardX11 no
+	ForwardX11Trusted no
+	ForwardAgent no
 
 Host apocrypha # apocrypha
 	HostName apocrypha.smb.basealt.ru
