.tmux.conf: Add commented prefix remapping

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,6 +40,11 @@ set -g set-titles-string "|#I:#P - #W - #T|"
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
+# Remap ctrl+b to ctrl+a
+#unbind-key C-b
+#set-option -g prefix C-a
+#bind-key C-a send-prefix
+
 #set -g @extrakto_key '"-n c-space"'
 
 # List of plugins
