.ssh/config: Add gitea@git.giran.cyou options

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,22 +1,9 @@
 # OpenSSH client configuration file format is described in ssh_config(5) manual page.
 
-Match user git host github.com
+Match user git,gitea host github.com,git.giran.cyou
 	ForwardX11 no
 	ForwardX11Trusted no
 	ForwardAgent no
-
-Host *
-	ForwardAgent yes
-	StrictHostKeyChecking no
-	UserKnownHostsFile=/dev/null
-	ForwardX11 yes
-	ForwardX11Trusted yes
-	Compression yes
-    AddKeysToAgent yes
-    GSSAPIAuthentication yes
-    GSSAPIDelegateCredentials yes
-	#ControlMaster auto
-	#ControlPersist yes
 
 Host gitery # Гитовница
 	HostName gitery.altlinux.org
@@ -77,3 +64,16 @@ Host jarvis # jarvis
 	User liannnix
 	RequestTTY yes
 	RemoteCommand tmux a || tmux
+
+Host *
+	ForwardAgent yes
+	StrictHostKeyChecking no
+	UserKnownHostsFile=/dev/null
+	ForwardX11 yes
+	ForwardX11Trusted yes
+	Compression yes
+    AddKeysToAgent yes
+    GSSAPIAuthentication yes
+    GSSAPIDelegateCredentials yes
+	#ControlMaster auto
+	#ControlPersist yes
