.ssh/config: Add liannnix-nb host

--- a/.ssh/config
+++ b/.ssh/config
@@ -24,6 +24,13 @@ Host gyle # Сборочница
 	ForwardX11Trusted no
 	ForwardAgent no
 
+Host liannnix-nb # liannnix-nb
+	HostName liannnix-nb.smb.basealt.ru
+	User liannnix
+	SetEnv XDG_CURRENT_DESKTOP=kde
+	RequestTTY yes
+	RemoteCommand tmux a || tmux
+
 Host apocrypha # apocrypha
 	HostName apocrypha.smb.basealt.ru
 	User liannnix
