--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "configs"]
 	path = configs
 	url = gitea@git.giran.cyou:liannnix/configs.git
+[submodule ".yadm/yadm"]
+	path = .yadm/yadm
+	url = https://github.com/TheLocehiliosan/yadm.git
