.tmux.conf: Add lazyvim related options

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,8 @@ set -g mode-keys vi
 set -g default-terminal "xterm-256color"
 #set-option -sa terminal-features ',xterm-256color:RGB'
 set-option -ga terminal-overrides ',xterm-256color:Tc'
+set-option -sg escape-time 10
+set-option -g focus-events on
 setw -g monitor-activity on
 set -g base-index 1
 
