.tmux.conf: Add autoinstall tpm and other plugins

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -63,6 +63,10 @@ set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+set-environment -g TMUX_PLUGIN_MANAGER_PATH "~/.tmux/plugins/"
+run 'test ! -f ~/.tmux/plugins/tpm/tpm && git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'
+run '~/.tmux/plugins/tpm/bin/install_plugins'
+run '~/.tmux/plugins/tpm/bin/update_plugins'
 run '~/.tmux/plugins/tpm/tpm'
 
 #bind-key -n c-space run-shell "\"$HOME/.tmux/plugins/extrakto/scripts/open.sh\" \"#{pane_id}\""
