.tmux.conf: Add neovim modifications

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,8 @@ set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ',xterm-256color:Tc'
 set-option -sg escape-time 10
 set-option -g focus-events on
+bind-key -n Home send Escape "OH"
+bind-key -n End send Escape "OF"
 setw -g monitor-activity on
 set -g base-index 1
 
