--- a/.gnupg/gpg-agent.conf
+++ b/.gnupg/gpg-agent.conf
@@ -2,5 +2,5 @@
 no-grab
 no-allow-external-cache
 pinentry-program /usr/bin/pinentry-tty
-default-cache-ttl 460800
-max-cache-ttl 460800
+default-cache-ttl 460800000
+max-cache-ttl 460800000
