--- a/.hasher/config
+++ b/.hasher/config
@@ -5,4 +5,4 @@ workdir="/tmp/.private/liannnix/"
 target=x86_64
 mount=/dev/pts,/proc
 known_mountpoints=/proc,/dev/pts,/sys
-def_repo=/home/liannnix/alt/repo
+def_repo=/home/SMB.BASEALT.RU/liannnix/alt/repo
