--- a/.ssh/config
+++ b/.ssh/config
@@ -72,6 +72,34 @@ Host jarvis # jarvis
 	RequestTTY yes
 	RemoteCommand tmux a || tmux
 
+Host elderly # elderly
+	HostName elderly.smb.basealt.ru
+	User root
+
+### Temporary hosts
+
+Host rt-gateway
+	HostName 10.64.166.100
+	User test
+
+Host rt-astra-arm
+	HostName 10.255.2.36
+	User root
+	ProxyJump rt-gateway
+
+Host router-224
+	Hostname 10.64.224.2
+	User root
+
+Host ansible.dev
+	Hostname ansible.dev.srt.basealt.ru
+	User ansible
+	RemoteForward /run/user/918801159/gnupg/S.gpg-agent /run/user/758801151/gnupg/S.gpg-agent.extra
+
+Host ansible.dev-codium
+	Hostname ansible.dev.srt.basealt.ru
+	User ansible
+
 Host *
 	ForwardAgent yes
 	StrictHostKeyChecking no
@@ -79,8 +107,10 @@ Host *
 	ForwardX11 yes
 	ForwardX11Trusted yes
 	Compression yes
-    AddKeysToAgent yes
-    GSSAPIAuthentication yes
-    GSSAPIDelegateCredentials yes
+	AddKeysToAgent yes
+	GSSAPIAuthentication yes
+	GSSAPIDelegateCredentials yes
 	#ControlMaster auto
 	#ControlPersist yes
+	HostkeyAlgorithms +ssh-rsa
+	PubkeyAcceptedAlgorithms +ssh-rsa
