--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,7 +7,8 @@ set -g mouse on
 set -g status-keys vi
 set -g mode-keys vi
 #set -g default-command "reattach-to-user-namespace -l $SHELL"
-set -g default-terminal "xterm-256color"
+#set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
 #set-option -sa terminal-features ',xterm-256color:RGB'
 set-option -ga terminal-overrides ',xterm-256color:Tc'
 set-option -sg escape-time 10
