.ssh/config: Add hosts

--- a/.ssh/config
+++ b/.ssh/config
@@ -72,20 +72,22 @@ Host jarvis # jarvis
 	RequestTTY yes
 	RemoteCommand tmux a || tmux
 
+Host sekai # sekai
+    Hostname sekai.giran.cyou
+    User root
+	RequestTTY yes
+
 Host elderly # elderly
 	HostName elderly.smb.basealt.ru
 	User root
 
-### Temporary hosts
+### VM hosts
 
-Host rt-gateway
-	HostName 10.64.166.100
-	User test
+Host jarvis-dc-repl1
+    Hostname jarvis-dc-repl1.giran.cyou
+    User root
 
-Host rt-astra-arm
-	HostName 10.255.2.36
-	User root
-	ProxyJump rt-gateway
+### Stands
 
 Host router-224
 	Hostname 10.64.224.2
@@ -99,6 +101,17 @@ Host ansible.dev
 Host ansible.dev-codium
 	Hostname ansible.dev.srt.basealt.ru
 	User ansible
+
+### Temporary hosts
+
+Host rt-gateway
+	HostName 10.64.166.100
+	User test
+
+Host rt-astra-arm
+	HostName 10.255.2.36
+	User root
+	ProxyJump rt-gateway
 
 Host *
 	ForwardAgent yes
