--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,9 +7,8 @@ set -g mouse on
 set -g status-keys vi
 set -g mode-keys vi
 #set -g default-command "reattach-to-user-namespace -l $SHELL"
-#set -g default-terminal "xterm-256color"
-set -g default-terminal "screen-256color"
-#set-option -sa terminal-features ',xterm-256color:RGB'
+set -g default-terminal "tmux-256color"
+set-option -a terminal-features 'xterm-256color:RGB'
 set-option -ga terminal-overrides ',xterm-256color:Tc'
 set-option -sg escape-time 10
 set-option -g focus-events on
@@ -17,6 +16,7 @@ bind-key -n Home send Escape "OH"
 bind-key -n End send Escape "OF"
 setw -g monitor-activity on
 set -g base-index 1
+setw -g pane-base-index 1
 
 # Message bar
 set -g message-style bright,bg=black,fg=blue
@@ -40,36 +40,55 @@ set -g status-left '#[fg=green][#I:#P #W] #(whoami)@#(hostname -s) '
 set -g status-right "{#[bold,fg=cyan]#(uptime | awk -F: '{print $(NF)}' | sed s/' '//)#[nobold,fg=default]}  {#[bold,fg=cyan]%a %m/%d %H:%M%p#[nobold,fg=default]}"
 
 # Terminal title bar
+set -g set-titles on
 set -g set-titles-string "|#I:#P - #W - #T|"
 
+# Pane title bar
+set -g pane-border-status top
+#set -g pane-border-format "#{pane_index} #{pane_title} #{pane_current_path}"
+
 bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+#bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+bind-key -T copy-mode-vi 'y' send -X copy-selection
 
 # Remap ctrl+b to ctrl+a
 #unbind-key C-b
 #set-option -g prefix C-a
 #bind-key C-a send-prefix
 
+set-option -g @ssh-split-keep-remote-cwd "true"
+set-option -g @ssh-split-strip-cmd "true"
+set-option -g @ssh-split-h-key "|"
+set-option -g @ssh-split-v-key "-"
+set-option -g @ssh-split-w-key "W"
+
+set -g @fzf-goto-session 'prefix + S'
+set -g @resurrect-capture-pane-contents 'off'
+set -g @continuum-restore 'on'
+set -g @treemux-tree-focus 'e'
+set -g @treemux-tree 'E'
+set -g @treemux-tree-command 'tree -C'
+set -g @treemux-tree-nvim-init-file '~/.tmux/plugins/treemux/configs/treemux_init.lua'
+
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-#set -g @plugin 'b0o/tmux-autoreload'
+set -g @plugin 'b0o/tmux-autoreload'
 set -g @plugin 'thuanOwa/tmux-fzf-session-switch'
 set -g @plugin 'jaclu/tmux-menus'
 set -g @plugin 'noscript/tmux-mighty-scroll'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'laktak/extrakto'
-
-set -g @fzf-goto-session 'prefix + S'
-set -g @resurrect-capture-pane-contents 'on'
-set -g @continuum-restore 'on'
+set -g @plugin 'pschmitt/tmux-ssh-split'
+#set -g @plugin 'tmux-plugins/tmux-sidebar'
+set -g @plugin 'kiyoon/treemux'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 set-environment -g TMUX_PLUGIN_MANAGER_PATH "~/.tmux/plugins/"
 run 'test ! -f ~/.tmux/plugins/tpm/tpm && git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'
 run '~/.tmux/plugins/tpm/bin/install_plugins'
-run '~/.tmux/plugins/tpm/bin/update_plugins'
+run '~/.tmux/plugins/tpm/bin/update_plugins all'
 run '~/.tmux/plugins/tpm/tpm'
 
-#bind-key -n c-space run-shell "\"$HOME/.tmux/plugins/extrakto/scripts/open.sh\" \"#{pane_id}\""
