--- a/.tmux.conf
+++ b/.tmux.conf
@@ -84,6 +84,7 @@ set -g @plugin 'laktak/extrakto'
 set -g @plugin 'pschmitt/tmux-ssh-split'
 #set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'kiyoon/treemux'
+set -g @plugin 'erikw/tmux-powerline'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 set-environment -g TMUX_PLUGIN_MANAGER_PATH "~/.tmux/plugins/"
