--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,25 +19,25 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 # Message bar
-set -g message-style bright,bg=black,fg=blue
-#set -g message-attr bright
-#set -g message-bg black
-#set -g message-fg blue
-set -g display-time 2000
-set -g display-panes-time 2000
+#set -g message-style bright,bg=black,fg=blue
+##set -g message-attr bright
+##set -g message-bg black
+##set -g message-fg blue
+#set -g display-time 2000
+#set -g display-panes-time 2000
 
 # Window mode bar
-#setw -g mode-bg white
-#setw -g mode-fg black
-setw -g mode-style fg=black,bg=white
+##setw -g mode-bg white
+##setw -g mode-fg black
+#setw -g mode-style fg=black,bg=white
 
 # Status bar
-set -g status-bg black
-set -g status-fg white
-set -g status-interval 10
-set -g status-left-length 50
-set -g status-left '#[fg=green][#I:#P #W] #(whoami)@#(hostname -s) '
-set -g status-right "{#[bold,fg=cyan]#(uptime | awk -F: '{print $(NF)}' | sed s/' '//)#[nobold,fg=default]}  {#[bold,fg=cyan]%a %m/%d %H:%M%p#[nobold,fg=default]}"
+#set -g status-bg black
+#set -g status-fg white
+#set -g status-interval 10
+#set -g status-left-length 50
+#set -g status-left '#[fg=green][#I:#P #W] #(whoami)@#(hostname -s) '
+#set -g status-right "{#[bold,fg=cyan]#(uptime | awk -F: '{print $(NF)}' | sed s/' '//)#[nobold,fg=default]}  {#[bold,fg=cyan]%a %m/%d %H:%M%p#[nobold,fg=default]}"
 
 # Terminal title bar
 set -g set-titles on
@@ -46,6 +46,11 @@ set -g set-titles-string "|#I:#P - #W - #T|"
 # Pane title bar
 set -g pane-border-status top
 #set -g pane-border-format "#{pane_index} #{pane_title} #{pane_current_path}"
+
+# Windows renaming
+set-option -wg automatic-rename on
+#set-option -wg automatic-rename-format "#{s/^| ([^ ]*) .*$/\1/:pane_title}"
+set-option -wg automatic-rename-format '#{s/^\| ([^ ]*) \|.*$/\1/:pane_title}'
 
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 #bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
