.ssh/config: Update hosts

--- a/.ssh/config
+++ b/.ssh/config
@@ -29,21 +29,18 @@ Host liannnix-nb # liannnix-nb
 	User liannnix
 	SetEnv XDG_CURRENT_DESKTOP=kde
 	RequestTTY yes
-	RemoteCommand tmux a || tmux
 
 Host apocrypha # apocrypha
 	HostName apocrypha.smb.basealt.ru
 	User liannnix
 	SetEnv XDG_CURRENT_DESKTOP=kde
 	RequestTTY yes
-	RemoteCommand tmux a || tmux
 
 Host orion # orion
 	HostName orion.giran.cyou
 	User liannnix
 	SetEnv XDG_CURRENT_DESKTOP=kde
 	RequestTTY yes
-	RemoteCommand tmux a || tmux
 
 Host ttk-ap # ttk-ap
 	HostName ttk-ap.link.giran.cyou
@@ -58,19 +55,16 @@ Host sora # sora
 	HostName sora.giran.cyou
 	User liannnix
 	RequestTTY yes
-	RemoteCommand tmux a || tmux
 
 Host yun # yun
 	HostName yun.giran.cyou
 	User liannnix
 	RequestTTY yes
-	RemoteCommand tmux a || tmux
 
 Host jarvis # jarvis
 	HostName jarvis.giran.cyou
 	User liannnix
 	RequestTTY yes
-	RemoteCommand tmux a || tmux
 
 Host elderly # elderly
 	HostName elderly.smb.basealt.ru
@@ -82,12 +76,7 @@ Host rt-gateway
 	HostName 10.64.166.100
 	User test
 
-Host rt-astra-arm
-	HostName 10.255.2.36
-	User root
-	ProxyJump rt-gateway
-
-Host router-224
+Host router.dev
 	Hostname 10.64.224.2
 	User root
 
