.ssh/config: Update hosts

--- a/.ssh/config
+++ b/.ssh/config
@@ -28,19 +28,16 @@ Host liannnix-nb # liannnix-nb
 	HostName liannnix-nb.smb.basealt.ru
 	User liannnix
 	SetEnv XDG_CURRENT_DESKTOP=kde
-	RequestTTY yes
 
 Host apocrypha # apocrypha
 	HostName apocrypha.smb.basealt.ru
 	User liannnix
 	SetEnv XDG_CURRENT_DESKTOP=kde
-	RequestTTY yes
 
 Host orion # orion
 	HostName orion.giran.cyou
 	User liannnix
 	SetEnv XDG_CURRENT_DESKTOP=kde
-	RequestTTY yes
 
 Host ttk-ap # ttk-ap
 	HostName ttk-ap.link.giran.cyou
@@ -54,31 +51,20 @@ Host ttk-cpe # ttk-cpe
 Host sora # sora
 	HostName sora.giran.cyou
 	User liannnix
-	RequestTTY yes
 
 Host yun # yun
 	HostName yun.giran.cyou
-	User liannnix
-	RequestTTY yes
-
-Host jarvis # jarvis
-	HostName jarvis.giran.cyou
-	User liannnix
-	RequestTTY yes
+	User root
 
 Host elderly # elderly
 	HostName elderly.smb.basealt.ru
 	User root
 
-### Temporary hosts
-
-Host rt-gateway
-	HostName 10.64.166.100
-	User test
-
 Host router.dev
 	Hostname 10.64.224.2
 	User root
+
+### Temporary hosts
 
 Host ansible.dev
 	Hostname ansible.dev.srt.basealt.ru
