.ssh/config: Update hosts

--- a/.ssh/config
+++ b/.ssh/config
@@ -50,7 +50,7 @@ Host ttk-cpe # ttk-cpe
 
 Host sora # sora
 	HostName sora.giran.cyou
-	User liannnix
+	User root
 
 Host yun # yun
 	HostName yun.giran.cyou
