.ssh/config: Enable KnownHosts

--- a/.ssh/config
+++ b/.ssh/config
@@ -78,7 +78,7 @@ Host ansible.dev-codium
 Host *
 	ForwardAgent yes
 	StrictHostKeyChecking no
-	UserKnownHostsFile=/dev/null
+#	UserKnownHostsFile=/dev/null
 	ForwardX11 yes
 	ForwardX11Trusted yes
 	Compression yes
