.ssh/config: Update hosts

--- a/.ssh/config
+++ b/.ssh/config
@@ -50,6 +50,7 @@ Host ttk-cpe # ttk-cpe
 
 Host sora # sora
 	HostName sora.giran.cyou
+    Port 65222
 	User root
 
 Host yun # yun
@@ -63,6 +64,13 @@ Host elderly # elderly
 Host router.dev
 	Hostname 10.64.224.2
 	User root
+
+### Jump servers
+
+Host giran.rt
+    Hostname 88.147.142.191
+    Port 65222
+    User root
 
 ### Temporary hosts
 
