.ssh/config: Huge refactoring

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,88 +1,122 @@
-# OpenSSH client configuration file format is described in ssh_config(5) manual page.
-
+#### Git servers specific options ##############################################
 Match user git,gitea host github.com,git.giran.cyou
-	ForwardX11 no
-	ForwardX11Trusted no
+    ForwardX11 no
 	ForwardAgent no
+################################################################################
 
-Host gitery # Гитовница
-	HostName gitery.altlinux.org
-	User git_liannnix
-	Port 222
-	# if stored separately
-	IdentityFile ~/.ssh/girar.key
-	ForwardX11 no
-	ForwardX11Trusted no
-	ForwardAgent no
-
-Host gyle # Сборочница
-	HostName gyle.altlinux.org
+#### Gitery and Gyle ###########################################################
+Host gitery
+	Hostname gitery.altlinux.org
 	User git_liannnix
 	Port 222
 	IdentityFile ~/.ssh/girar.key
 	ForwardX11 no
-	ForwardX11Trusted no
 	ForwardAgent no
+Host gyle
+	Hostname gyle.altlinux.org
+	User git_liannnix
+	Port 222
+	IdentityFile ~/.ssh/girar.key
+	ForwardX11 no
+	ForwardAgent no
+################################################################################
 
-Host liannnix-nb # liannnix-nb
-	HostName liannnix-nb.smb.basealt.ru
+#### BaseALT hosts #############################################################
+Host liannnix-nb
+	Hostname liannnix-nb.smb.basealt.ru
 	User liannnix
 	SetEnv XDG_CURRENT_DESKTOP=kde
-
-Host apocrypha # apocrypha
-	HostName apocrypha.smb.basealt.ru
+Host apocrypha
+	Hostname apocrypha.smb.basealt.ru
 	User liannnix
 	SetEnv XDG_CURRENT_DESKTOP=kde
+################################################################################
 
-Host orion # orion
-	HostName orion.giran.cyou
+#### Giran desktops ############################################################
+Host orion
+	Hostname orion.giran.cyou
 	User liannnix
 	SetEnv XDG_CURRENT_DESKTOP=kde
+################################################################################
 
-Host ttk-ap # ttk-ap
-	HostName ttk-ap.link.giran.cyou
+#### Giran network hardware ####################################################
+Host ttk-ap
+	Hostname ttk-ap.link.giran.cyou
 	User lian
 	Port 4422
-
-Host ttk-cpe # ttk-cpe
-	HostName ttk-cpe.link.giran.cyou
+Host ttk-cpe
+	Hostname ttk-cpe.link.giran.cyou
 	User lian
-
-Host sora # sora
-	HostName sora.giran.cyou
+Host sora
+	Hostname sora.giran.cyou
     Port 65222
 	User root
+Host junko
+    Hostname junko.giran.cyou
+    User root
+Host dlink
+    Hostname dlink.giran.cyou
+    User root
+    ForwardX11 no
+################################################################################
 
-Host yun # yun
-	HostName yun.giran.cyou
+#### Giran baremetal servers ###################################################
+Host yun
+	Hostname yun.giran.cyou
 	User root
+Host sekai
+    Hostname sekai.giran.cyou
+    User root
+################################################################################
 
+#### Giran VPS #################################################################
+Host anzu
+    Hostname 213.183.51.178
+    User root
+    Port 65222
+    ForwardX11 no
+Host soyokaze
+    Hostname 185.105.90.26
+    User root
+    Port 65222
+    ForwardX11 no
+Host xina
+    Hostname 46.17.107.6
+    User root
+    Port 65222
+    ForwardX11 no
+################################################################################
+
+#### BaseALT servers ###########################################################
 Host elderly # elderly
-	HostName elderly.smb.basealt.ru
+	Hostname elderly.smb.basealt.ru
 	User root
+################################################################################
 
+#### Elderly stands ############################################################
 Host router.dev
 	Hostname 10.64.224.2
 	User root
+################################################################################
 
-### Jump servers
-
-Host giran.rt
-    Hostname 88.147.142.191
-    Port 65222
-    User root
-
-### Temporary hosts
-
+#### Temporary hosts ###########################################################
 Host ansible.dev
 	Hostname ansible.dev.srt.basealt.ru
 	User ansible
 	RemoteForward /run/user/918801159/gnupg/S.gpg-agent /run/user/758801151/gnupg/S.gpg-agent.extra
-
 Host ansible.dev-codium
 	Hostname ansible.dev.srt.basealt.ru
 	User ansible
+################################################################################
 
+#### Jump servers ##############################################################
+Host giran.rt
+    Hostname 88.147.142.191
+    Port 65222
+    User root
+################################################################################
+
+#### Default settings ##########################################################
 Host *
 	ForwardAgent yes
 	StrictHostKeyChecking no
@@ -93,7 +127,8 @@ Host *
 	AddKeysToAgent yes
 	GSSAPIAuthentication yes
 	GSSAPIDelegateCredentials yes
-	#ControlMaster auto
-	#ControlPersist yes
+#   ControlMaster auto
+#   ControlPersist yes
 	HostkeyAlgorithms +ssh-rsa
 	PubkeyAcceptedAlgorithms +ssh-rsa
+################################################################################
