Update tmux settings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,7 +7,7 @@ set -g mouse on
 set -g status-keys vi
 set -g mode-keys vi
 #set -g default-command "reattach-to-user-namespace -l $SHELL"
-set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
 set-option -a terminal-features 'xterm-256color:RGB'
 set-option -ga terminal-overrides ',xterm-256color:Tc'
 set-option -sg escape-time 10
@@ -79,7 +79,7 @@ set -g @treemux-tree-nvim-init-file '~/.tmux/plugins/treemux/configs/treemux_ini
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'b0o/tmux-autoreload'
+#set -g @plugin 'b0o/tmux-autoreload'
 set -g @plugin 'thuanOwa/tmux-fzf-session-switch'
 set -g @plugin 'jaclu/tmux-menus'
 set -g @plugin 'noscript/tmux-mighty-scroll'
