.config/kitty: Add kitty configs

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -74,13 +74,36 @@ set -g @treemux-tree-focus 'e'
 set -g @treemux-tree 'E'
 set -g @treemux-tree-command 'tree -C'
 set -g @treemux-tree-nvim-init-file '~/.tmux/plugins/treemux/configs/treemux_init.lua'
-
+set -g @tokyo-night-tmux_window_id_style digital
+set -g @tokyo-night-tmux_pane_id_style hsquare
+set -g @tokyo-night-tmux_zoom_id_style dsquare
+set -g @tokyo-night-tmux_show_datetime 1
+set -g @tokyo-night-tmux_date_format DMY
+set -g @tokyo-night-tmux_time_format 24H
+set -g @tokyo-night-tmux_show_netspeed 1
+set -g @tokyo-night-tmux_netspeed_iface "enp4s0f3u1u1u2"    # Detected via default route
+set -g @tokyo-night-tmux_netspeed_showip 1                  # Display IPv4 address (default 0)
+set -g @tokyo-night-tmux_netspeed_refresh 1                 # Update interval in seconds (default 1)
+set -g @tokyo-night-tmux_show_path 1
+set -g @tokyo-night-tmux_path_format relative               # 'relative' or 'full'
+set -g @tokyo-night-tmux_show_battery_widget 1
+#set -g @tokyo-night-tmux_battery_name "BAT1"               # some linux distro have 'BAT0'
+#set -g @tokyo-night-tmux_battery_low_threshold 21 # default
+set -g @tmux-translator "t"                                 # the key to trigger translation
+set -g @tmux-translator-width "38%"                         # the width of popup window
+set -g @tmux-translator-height "38%"                        # the height of popup window
+set -g @tmux-translator-from "en"                           # translate from
+set -g @tmux-translator-to "ru"                             # translate to
+set -g @tmux-translator-engine "google"                     # engine
+#set -g @tmux-translator-engine "google|ciba|youdao"         # multiple engines
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'b0o/tmux-autoreload'
 set -g @plugin 'thuanOwa/tmux-fzf-session-switch'
+set -g @plugin 'sainnhe/tmux-fzf'
+set -g @plugin 'sainnhe/tmux-translator'
 set -g @plugin 'jaclu/tmux-menus'
 set -g @plugin 'noscript/tmux-mighty-scroll'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
@@ -89,7 +112,8 @@ set -g @plugin 'laktak/extrakto'
 set -g @plugin 'pschmitt/tmux-ssh-split'
 #set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'kiyoon/treemux'
-set -g @plugin 'erikw/tmux-powerline'
+#set -g @plugin 'erikw/tmux-powerline'
+set -g @plugin "janoamaral/tokyo-night-tmux"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 set-environment -g TMUX_PLUGIN_MANAGER_PATH "~/.tmux/plugins/"
