--- a/.tmux.conf
+++ b/.tmux.conf
@@ -80,10 +80,10 @@ set -g @tokyo-night-tmux_zoom_id_style dsquare
 set -g @tokyo-night-tmux_show_datetime 1
 set -g @tokyo-night-tmux_date_format DMY
 set -g @tokyo-night-tmux_time_format 24H
-set -g @tokyo-night-tmux_show_netspeed 1
-set -g @tokyo-night-tmux_netspeed_iface "enp4s0f3u1u1u2"    # Detected via default route
-set -g @tokyo-night-tmux_netspeed_showip 1                  # Display IPv4 address (default 0)
-set -g @tokyo-night-tmux_netspeed_refresh 1                 # Update interval in seconds (default 1)
+#set -g @tokyo-night-tmux_show_netspeed 1
+#set -g @tokyo-night-tmux_netspeed_iface "enp4s0f3u1u1u2"    # Detected via default route
+#set -g @tokyo-night-tmux_netspeed_showip 1                  # Display IPv4 address (default 0)
+#set -g @tokyo-night-tmux_netspeed_refresh 1                 # Update interval in seconds (default 1)
 set -g @tokyo-night-tmux_show_path 1
 set -g @tokyo-night-tmux_path_format relative               # 'relative' or 'full'
 set -g @tokyo-night-tmux_show_battery_widget 1
