.hasher: Update apt configs

--- a/.hasher/sisyphus.conf
+++ b/.hasher/sisyphus.conf
@@ -1,2 +1,2 @@
-Dir::Etc::SourceList "/home/liannnix/alt/branch-sisyphus.list.conf";
+Dir::Etc::SourceList "/home/SMB.BASEALT.RU/liannnix/.hasher/sisyphus.list.conf";
 Dir::Etc::SourceParts "/var/empty";
