.ssh/config: Add jarvis-dc-repl1 host

--- a/.ssh/config
+++ b/.ssh/config
@@ -87,6 +87,13 @@ Host xina
     ForwardX11 no
 ################################################################################
 
+#### Giran VMs #################################################################
+Host jarvis-dc-repl1
+    Hostname 192.168.21.11
+    User root
+    ForwardX11 no
+################################################################################
+
 #### BaseALT servers ###########################################################
 Host elderly # elderly
 	Hostname elderly.smb.basealt.ru
