.tmux.conf: Disable tokyonight plugin and enable powerline plugin

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -112,8 +112,8 @@ set -g @plugin 'laktak/extrakto'
 set -g @plugin 'pschmitt/tmux-ssh-split'
 #set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'kiyoon/treemux'
-#set -g @plugin 'erikw/tmux-powerline'
-set -g @plugin "janoamaral/tokyo-night-tmux"
+set -g @plugin 'erikw/tmux-powerline'
+#set -g @plugin "janoamaral/tokyo-night-tmux"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 set-environment -g TMUX_PLUGIN_MANAGER_PATH "~/.tmux/plugins/"
