--- a/.tmux.conf
+++ b/.tmux.conf
@@ -96,6 +96,8 @@ set -g @tmux-translator-from "en"                           # translate from
 set -g @tmux-translator-to "ru"                             # translate to
 set -g @tmux-translator-engine "google"                     # engine
 #set -g @tmux-translator-engine "google|ciba|youdao"         # multiple engines
+set -g @floax-bind '-n M-p'
+#set -g @floax-bind-menu '-n M-m'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -114,6 +116,7 @@ set -g @plugin 'pschmitt/tmux-ssh-split'
 set -g @plugin 'kiyoon/treemux'
 set -g @plugin 'erikw/tmux-powerline'
 #set -g @plugin "janoamaral/tokyo-night-tmux"
+set -g @plugin 'omerxx/tmux-floax'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 set-environment -g TMUX_PLUGIN_MANAGER_PATH "~/.tmux/plugins/"
