--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,11 +55,15 @@ set-option -wg automatic-rename-format '#{s/^\| ([^ ]*) \|.*$/\1/:pane_title}'
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 #bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 bind-key -T copy-mode-vi 'y' send -X copy-selection
+bind-key -T copy-mode-vi 'Y' send -X copy-line
 
 # Remap ctrl+b to ctrl+a
 #unbind-key C-b
 #set-option -g prefix C-a
-#bind-key C-a send-prefix
+bind-key -n C-a send-prefix
+
+# Enable/disable mouse mode
+bind-key M set mouse 
 
 set-option -g @ssh-split-keep-remote-cwd "true"
 set-option -g @ssh-split-strip-cmd "true"
@@ -96,8 +100,8 @@ set -g @tmux-translator-from "en"                           # translate from
 set -g @tmux-translator-to "ru"                             # translate to
 set -g @tmux-translator-engine "google"                     # engine
 #set -g @tmux-translator-engine "google|ciba|youdao"         # multiple engines
-set -g @floax-bind '-n M-p'
 #set -g @floax-bind-menu '-n M-m'
+set -g @floax-bind '-n M-p'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
