.ssh/config: Update

--- a/.ssh/config
+++ b/.ssh/config
@@ -54,6 +54,7 @@ Host sora
 Host junko
     Hostname junko.giran.cyou
     User root
+    ForwardX11 no
 Host dlink
     Hostname dlink.giran.cyou
     User root
