--- a/.ssh/config
+++ b/.ssh/config
@@ -40,6 +40,11 @@ Host orion
 ################################################################################
 
 #### Giran network hardware ####################################################
+Host core
+    Hostname core.giran.cyou
+    User root
+    Port 65222
+    ForwardX11 no
 Host ttk-ap
 	Hostname ttk-ap.link.giran.cyou
 	User lian
@@ -51,12 +56,24 @@ Host sora
 	Hostname sora.giran.cyou
     Port 65222
 	User root
-Host junko
-    Hostname junko.giran.cyou
-    User root
-    ForwardX11 no
 Host dlink
     Hostname dlink.giran.cyou
+    User root
+    ForwardX11 no
+Host basealt-gw
+    Hostname basealt-gw.link.giran.cyou
+    Port 65222
+    User root
+    ForwardX11 no
+Host sw-core
+    Hostname 10.90.90.90
+    User admin
+    ForwardX11 no
+    KexAlgorithms +diffie-hellman-group1-sha1
+    Ciphers aes128-ctr,aes192-ctr,aes256-ctr,aes128-cbc,3des-cbc
+	IdentityFile ~/.ssh/extra/liannnix_old
+Host wifi-ap-master
+    Hostname wifi-ap-master.giran.cyou
     User root
     ForwardX11 no
 ################################################################################
@@ -74,7 +91,7 @@ Host sekai
 Host anzu
     Hostname 213.183.51.178
     User root
-    Port 65222
+    Port 22
     ForwardX11 no
 Host soyokaze
     Hostname 185.105.90.26
@@ -105,6 +122,7 @@ Host elderly # elderly
 Host router.dev
 	Hostname 10.64.224.2
 	User root
+    IdentityFile .ssh/extra/pve_admin
 ################################################################################
 
 #### Temporary hosts ###########################################################
