.ssh/config: Update hosts

--- a/.ssh/config
+++ b/.ssh/config
@@ -66,8 +66,8 @@ Host basealt-gw
     User root
     ForwardX11 no
 Host sw-core
-    Hostname 10.90.90.90
-    User admin
+    Hostname sw-core.giran.cyou
+    User web
     ForwardX11 no
     KexAlgorithms +diffie-hellman-group1-sha1
     Ciphers aes128-ctr,aes192-ctr,aes256-ctr,aes128-cbc,3des-cbc
@@ -75,6 +75,22 @@ Host sw-core
 Host wifi-ap-master
     Hostname wifi-ap-master.giran.cyou
     User root
+    Port 65222
+    ForwardX11 no
+Host wifi-ap-repeater
+    Hostname wifi-ap-master.giran.cyou
+    User root
+    Port 65222
+    ForwardX11 no
+Host domru
+    Hostname domru.giran.cyou
+    User root
+    Port 65222
+    ForwardX11 no
+Host domru.link
+    Hostname domru.link.giran.cyou
+    User root
+    Port 65222
     ForwardX11 no
 ################################################################################
 
@@ -107,7 +123,11 @@ Host xina
 
 #### Giran VMs #################################################################
 Host jarvis-dc-repl1
-    Hostname 192.168.21.11
+    Hostname 10.0.12.11
+    User root
+    ForwardX11 no
+Host dc0
+    Hostname dc0.giran.cyou
     User root
     ForwardX11 no
 ################################################################################
