--- a/.ssh/config
+++ b/.ssh/config
@@ -46,12 +46,20 @@ Host core
     Port 65222
     ForwardX11 no
 Host ttk-ap
-	Hostname ttk-ap.link.giran.cyou
+	Hostname ttk-ap.netdev.giran.lan
 	User lian
-	Port 4422
+	Port 65222
+Host ttk-ap.rt
+	Hostname rt.link.giran.cyou
+	User lian
+	Port 65222
 Host ttk-cpe
+	Hostname ttk-cpe.ttk.giran.lan
+	User lian
+Host ttk-cpe.rt
 	Hostname ttk-cpe.link.giran.cyou
 	User lian
+	Port 65222
 Host sora
 	Hostname sora.giran.cyou
     Port 65222
