.ssh/config: Add storage server

--- a/.ssh/config
+++ b/.ssh/config
@@ -104,11 +104,15 @@ Host domru.link
 
 #### Giran baremetal servers ###################################################
 Host yun
-	Hostname yun.giran.cyou
+    Hostname yun.giran.cyou
 	User root
 Host sekai
-    Hostname sekai.giran.cyou
+    Hostname sekai.pve.giran.lan
     User root
+Host storage
+    Hostname storage.pve.giran.lan
+    User root
+    ForwardX11 no
 ################################################################################
 
 #### Giran VPS #################################################################
