--- a/.ssh/config
+++ b/.ssh/config
@@ -174,6 +174,13 @@ Host giran.rt
     User root
 ################################################################################
 
+#### Hosts via Jump servers ####################################################
+Host cifs.giran.rt
+    Hostname cifs.vms.giran.lan
+    ProxyJump giran.rt
+    ForwardX11 no
+################################################################################
+
 #### Default settings ##########################################################
 Host *
 	ForwardAgent yes
