.ssh/config: Add hosts

--- a/.ssh/config
+++ b/.ssh/config
@@ -131,6 +131,11 @@ Host xina
     User root
     Port 65222
     ForwardX11 no
+Host ns.lian.su    
+    Hostname 185.232.169.106
+    User root
+    Port 65222
+    ForwardX11 no
 ################################################################################
 
 #### Giran VMs #################################################################
@@ -165,6 +170,9 @@ Host ansible.dev
 Host ansible.dev-codium
 	Hostname ansible.dev.srt.basealt.ru
 	User ansible
+Host alterator-kea
+    Hostname 10.65.50.50
+    User root
 ################################################################################
 
 #### Jump servers ##############################################################
