.ssh/config: Update

--- a/.ssh/config
+++ b/.ssh/config
@@ -44,7 +44,6 @@ Host core
     Hostname core.giran.cyou
     User root
     Port 65222
-    ForwardX11 no
 Host ttk-ap
 	Hostname ttk-ap.netdev.giran.lan
 	User lian
@@ -63,16 +62,11 @@ Host ttk-cpe.rt
 Host sora
 	Hostname sora.giran.cyou
     Port 65222
-	User root
 Host dlink
     Hostname dlink.giran.cyou
-    User root
-    ForwardX11 no
 Host basealt-gw
     Hostname basealt-gw.link.giran.cyou
     Port 65222
-    User root
-    ForwardX11 no
 Host sw-core
     Hostname sw-core.giran.cyou
     User web
@@ -82,85 +76,58 @@ Host sw-core
 	IdentityFile ~/.ssh/extra/liannnix_old
 Host wifi-ap-master
     Hostname wifi-ap-master.giran.cyou
-    User root
     Port 65222
-    ForwardX11 no
 Host wifi-ap-repeater
     Hostname wifi-ap-master.giran.cyou
-    User root
     Port 65222
-    ForwardX11 no
 Host domru
     Hostname domru.giran.cyou
-    User root
     Port 65222
-    ForwardX11 no
 Host domru.link
     Hostname domru.link.giran.cyou
-    User root
     Port 65222
-    ForwardX11 no
 ################################################################################
 
 #### Giran baremetal servers ###################################################
 Host yun
 	Hostname yun.giran.cyou
-	User root
 Host sekai
     Hostname sekai.giran.cyou
-    User root
+Host storage
+    Hostname storage.pve.giran.lan
 ################################################################################
 
 #### Giran VPS #################################################################
 Host anzu
     Hostname 213.183.51.178
-    User root
-    Port 22
-    ForwardX11 no
 Host soyokaze
     Hostname 185.105.90.26
-    User root
     Port 65222
-    ForwardX11 no
 Host xina
     Hostname 46.17.107.6
-    User root
     Port 65222
-    ForwardX11 no
 ################################################################################
 
 #### Giran VMs #################################################################
 Host jarvis-dc-repl1
     Hostname 10.0.12.11
-    User root
-    ForwardX11 no
 Host dc0
     Hostname dc0.giran.cyou
-    User root
-    ForwardX11 no
+Host dc1
+    Hostname dc1.giran.cyou
+Host cifs
+    Hostname cifs.vms.giran.lan
 ################################################################################
 
 #### BaseALT servers ###########################################################
 Host elderly # elderly
 	Hostname elderly.smb.basealt.ru
-	User root
 ################################################################################
 
 #### Elderly stands ############################################################
-Host router.dev
-	Hostname 10.64.224.2
-	User root
-    IdentityFile .ssh/extra/pve_admin
 ################################################################################
 
 #### Temporary hosts ###########################################################
-Host ansible.dev
-	Hostname ansible.dev.srt.basealt.ru
-	User ansible
-	RemoteForward /run/user/918801159/gnupg/S.gpg-agent /run/user/758801151/gnupg/S.gpg-agent.extra
-Host ansible.dev-codium
-	Hostname ansible.dev.srt.basealt.ru
-	User ansible
 ################################################################################
 
 #### Jump servers ##############################################################
@@ -172,11 +139,12 @@ Host giran.rt
 
 #### Default settings ##########################################################
 Host *
+    User root
 	ForwardAgent yes
 	StrictHostKeyChecking no
 #	UserKnownHostsFile=/dev/null
-	ForwardX11 yes
-	ForwardX11Trusted yes
+#	ForwardX11 yes
+#	ForwardX11Trusted yes
 	Compression yes
 	AddKeysToAgent yes
 	GSSAPIAuthentication yes
