.ssh/config: Add TTK direct hosts

--- a/.ssh/config
+++ b/.ssh/config
@@ -10,14 +10,12 @@ Host gitery
 	User git_liannnix
 	Port 222
 	IdentityFile ~/.ssh/girar.key
-	ForwardX11 no
 	ForwardAgent no
 Host gyle
 	Hostname gyle.altlinux.org
 	User git_liannnix
 	Port 222
 	IdentityFile ~/.ssh/girar.key
-	ForwardX11 no
 	ForwardAgent no
 ################################################################################
 
@@ -70,9 +68,6 @@ Host basealt-gw
 Host sw-core
     Hostname sw-core.giran.cyou
     User web
-    ForwardX11 no
-    KexAlgorithms +diffie-hellman-group1-sha1
-    Ciphers aes128-ctr,aes192-ctr,aes256-ctr,aes128-cbc,3des-cbc
 	IdentityFile ~/.ssh/extra/liannnix_old
 Host wifi-ap-master
     Hostname wifi-ap-master.giran.cyou
@@ -150,8 +145,6 @@ Host giran.ttk
     Hostname 217.23.74.241
     User lian
     Port 65222
-    KexAlgorithms +diffie-hellman-group1-sha1
-    Ciphers aes128-ctr,aes192-ctr,aes256-ctr,aes128-cbc,3des-cbc
 	IdentityFile ~/.ssh/extra/liannnix_old
 ################################################################################
 
@@ -159,6 +152,33 @@ Host giran.ttk
 Host cifs.giran.rt
     Hostname cifs.vms.giran.lan
     ProxyJump giran.rt
+################################################################################
+
+#### Direct hosts via TTK Jump servers ####################################################
+Host sw-core.ttk.direct
+    Hostname 10.254.0.1
+    User web
+	IdentityFile ~/.ssh/extra/liannnix_old
+    Ciphers aes128-ctr,aes192-ctr,aes256-ctr,aes128-cbc,3des-cbc
+    ProxyJump giran.ttk
+Host sekai.ttk.direct
+    Hostname 10.254.0.2
+    ProxyJump giran.ttk
+Host storage.ttk.direct
+    Hostname 10.254.0.5
+    ProxyJump giran.ttk
+Host trunk-node.ttk.direct
+    Hostname 10.254.0.4
+    ProxyJump giran.ttk
+Host yun.ttk.direct
+    Hostname 10.254.0.3
+    ProxyJump giran.ttk
+Host wifi-ap-master.ttk.direct
+    Hostname 10.254.0.114
+    Port 65222
+    # LocalForward 51080 10.254.0.1:80      # sw-core: http://localhost:51080/
+    # LocalForward 52443 10.254.0.2:8006    # sekai:   http://localhost:52443/
+    ProxyJump giran.ttk
 ################################################################################
 
 #### Default settings ##########################################################
@@ -177,4 +197,6 @@ Host *
 #   ControlPersist yes
 	HostkeyAlgorithms +ssh-rsa
 	PubkeyAcceptedAlgorithms +ssh-rsa
+    KexAlgorithms +diffie-hellman-group1-sha1
+    Ciphers +aes128-ctr,aes192-ctr,aes256-ctr,aes128-cbc,3des-cbc
 ################################################################################
