.ssh/config: update

--- a/.ssh/config
+++ b/.ssh/config
@@ -101,7 +101,7 @@ Host soyokaze
 Host xina
     Hostname 46.17.107.6
     Port 65222
-Host ns.lian.su    
+Host ns.lian.su
     Hostname 185.232.169.106
     Port 65222
 ################################################################################
@@ -122,7 +122,12 @@ Host elderly # elderly
 	Hostname elderly.smb.basealt.ru
 ################################################################################
 
-#### Elderly stands ############################################################
+#### BaseALT VMs ###############################################################
+Host build
+    Hostname build.smb.basealt.ru
+    User liannnix
+    RemoteForward /home/SMB.BASEALT.RU/liannnix/.gnupg/S.gpg-agent /run/user/1493601104/gnupg/S.gpg-agent.extra
+    #RemoteForward /run/user/758801151/gnupg/S.gpg-agent /run/user/1493601104/gnupg/S.gpg-agent.extra
 ################################################################################
 
 #### Temporary hosts ###########################################################
