.ssh/config: change user git to alt for girar

--- a/.ssh/config
+++ b/.ssh/config
@@ -7,13 +7,13 @@ Match user git,gitea host github.com,git.giran.cyou
 #### Gitery and Gyle ###########################################################
 Host gitery
 	Hostname gitery.altlinux.org
-	User git_liannnix
+	User alt_liannnix
 	Port 222
 	IdentityFile ~/.ssh/girar.key
 	ForwardAgent no
 Host gyle
 	Hostname gyle.altlinux.org
-	User git_liannnix
+	User alt_liannnix
 	Port 222
 	IdentityFile ~/.ssh/girar.key
 	ForwardAgent no
