--- a/.ssh/config
+++ b/.ssh/config
@@ -90,6 +90,10 @@ Host sekai
     Hostname sekai.pve.giran.lan
 Host storage
     Hostname storage.pve.giran.lan
+Host n100
+    Hostname 10.0.9.7
+Host trunk-node
+    Hostname 10.0.9.4
 ################################################################################
 
 #### Giran VPS #################################################################
