--- a/.config/zed/settings.json
+++ b/.config/zed/settings.json
@@ -12,7 +12,7 @@
   "features": {
     "edit_prediction_provider": "zed"
   },
-  "assistant": {
+  "agent": {
     "profiles": {
       "write": {
         "name": "Write",
@@ -53,8 +53,8 @@
     "version": "2"
   },
   "vim_mode": true,
-  "ui_font_size": 20,
-  "buffer_font_size": 16.0,
+  "ui_font_size": 25,
+  "buffer_font_size": 20.0,
   "theme": {
     "mode": "system",
     "light": "One Light",
