.ssh/config: update

--- a/.ssh/config
+++ b/.ssh/config
@@ -43,16 +43,21 @@ Host core
     User root
     Port 65222
 Host ttk-ap
-	Hostname ttk-ap.netdev.giran.lan
+	Hostname ttk-ap.ttk.giran.lan
 	User lian
 	Port 65222
+	IdentityFile ~/.ssh/extra/liannnix_old
+    Ciphers aes128-ctr,aes192-ctr,aes256-ctr,aes128-cbc,3des-cbc
 Host ttk-ap.rt
 	Hostname rt.link.giran.cyou
 	User lian
 	Port 65222
 Host ttk-cpe
-	Hostname ttk-cpe.ttk.giran.lan
+	Hostname 10.0.128.10 # ttk-cpe.ttk.giran.lan
 	User lian
+	Port 65222
+	IdentityFile ~/.ssh/extra/liannnix_old
+    Ciphers aes128-ctr,aes192-ctr,aes256-ctr,aes128-cbc,3des-cbc
 Host ttk-cpe.rt
 	Hostname ttk-cpe.link.giran.cyou
 	User lian
@@ -107,6 +112,9 @@ Host xina
     Port 65222
 Host ns.lian.su
     Hostname 185.232.169.106
+    Port 65222
+Host vpn-nl
+    Hostname vpn-nl.lian.su
     Port 65222
 ################################################################################
 
@@ -188,6 +196,16 @@ Host wifi-ap-master.ttk.direct
     # LocalForward 51080 10.254.0.1:80      # sw-core: http://localhost:51080/
     # LocalForward 52443 10.254.0.2:8006    # sekai:   http://localhost:52443/
     ProxyJump giran.ttk
+################################################################################
+
+#### Direct hosts via VPN servers ##############################################
+Host ttk-ap.ipv6
+    Hostname ttk-ap-ipv6.lian.su
+    Port 65222
+    User lian
+	IdentityFile ~/.ssh/extra/liannnix_old
+    Ciphers aes128-ctr,aes192-ctr,aes256-ctr,aes128-cbc,3des-cbc
+    ProxyJump vpn-nl
 ################################################################################
 
 #### Default settings ##########################################################
