--- a/.ssh/config
+++ b/.ssh/config
@@ -107,14 +107,17 @@ Host anzu
 Host soyokaze
     Hostname 185.105.90.26
     Port 65222
-Host xina
-    Hostname 46.17.107.6
-    Port 65222
 Host ns.lian.su
     Hostname 185.232.169.106
     Port 65222
 Host vpn-nl
     Hostname vpn-nl.lian.su
+    Port 65222
+Host pdns-master
+    Hostname 45.144.67.71
+    Port 65222
+Host pdns-slave
+    Hostname 46.17.107.6
     Port 65222
 ################################################################################
 
