.ssh/config: update

--- a/.ssh/config
+++ b/.ssh/config
@@ -19,6 +19,12 @@ Host gyle
 	ForwardAgent no
 ################################################################################
 
+#### Giran Git server ###########################################################
+Host git
+    Hostname git.lan
+    Port 23231
+################################################################################
+
 #### BaseALT hosts #############################################################
 Host liannnix-nb
 	Hostname liannnix-nb.smb.basealt.ru
