.ssh/config: big update

--- a/.ssh/config
+++ b/.ssh/config
@@ -39,7 +39,7 @@ Host orion
 
 #### Giran network hardware ####################################################
 Host core
-    Hostname core.giran.cyou
+    Hostname core.lian.su
     User root
     Port 65222
 Host ttk-ap
@@ -49,7 +49,7 @@ Host ttk-ap
 	IdentityFile ~/.ssh/extra/liannnix_old
     Ciphers aes128-ctr,aes192-ctr,aes256-ctr,aes128-cbc,3des-cbc
 Host ttk-ap.rt
-	Hostname rt.link.giran.cyou
+	Hostname rt.lian.su
 	User lian
 	Port 65222
 Host ttk-cpe
@@ -63,13 +63,10 @@ Host ttk-cpe.rt
 	User lian
 	Port 65222
 Host sora
-	Hostname sora.giran.cyou
+	Hostname sora.lian.su
     Port 65222
 Host dlink
     Hostname dlink.giran.cyou
-Host basealt-gw
-    Hostname basealt-gw.link.giran.cyou
-    Port 65222
 Host sw-core
     Hostname sw-core.giran.cyou
     User web
@@ -81,20 +78,17 @@ Host wifi-ap-repeater
     Hostname wifi-ap-master.giran.cyou
     Port 65222
 Host domru
-    Hostname domru.giran.cyou
-    Port 65222
-Host domru.link
-    Hostname domru.link.giran.cyou
+    Hostname domru.lian.su
     Port 65222
 ################################################################################
 
 #### Giran baremetal servers ###################################################
 Host yun
-	Hostname yun.pve.giran.lan
+	Hostname yun.pve.lan
 Host sekai
-    Hostname sekai.pve.giran.lan
+    Hostname sekai.pve.lan
 Host storage
-    Hostname storage.pve.giran.lan
+    Hostname storage.pve.lan
 Host n100
     Hostname 10.0.9.7
 Host trunk-node
@@ -129,7 +123,7 @@ Host dc0
 Host dc1
     Hostname dc1.giran.cyou
 Host cifs
-    Hostname cifs.vms.giran.lan
+    Hostname cifs.smb.lan
 ################################################################################
 
 #### BaseALT servers ###########################################################
@@ -170,7 +164,7 @@ Host giran.ttk
 
 #### Hosts via Jump servers ####################################################
 Host cifs.giran.rt
-    Hostname cifs.vms.giran.lan
+    Hostname cifs.smb.lan
     ProxyJump giran.rt
 ################################################################################
 
